objects/Account_Portfolio_Snapshot__c.object
<CustomObject>
    <description>Recorded account KPIs to track portfolio trending</description>
    <fields>
        <fullName>Avarage_Clearing_Duration__c</fullName>
        <label>Avarage Clearing Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Accounts__c</fullName>
        <label>Number of Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Report_Execution_Time__c</fullName>
        <label>Report Execution Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Report_Name__c</fullName>
        <label>Report Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_number_of_records__c</fullName>
        <label>Total number of records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Account Portfolio Snapshot</label>
    <nameField>
        <displayFormat>APS-{0000}</displayFormat>
        <label>Account Portfolio Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Portfolio Snapshots</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>